# kria_ros_perception

./: .gitignore  .gitmodules  LICENSE  README.md
docs/: ros2_perception_node_landing.rst
docs/src/: app_deployment.md
src/image_pipeline_examples/: CMakeLists.txt  package.xml
src/image_pipeline_examples/launch/: trace_rectify.launch.py  trace_rectify_resize_gpu.launch.py
src/image_pipeline_examples/src/: rectify_resize_fpga_streamlined_node.cpp  rectify_resize_node.cpp
src/image_proc/: CMakeLists.txt  package.xml
src/image_proc/include/image_proc/: rectify.hpp  rectify_fpga_streamlined.hpp  rectify_resize_fpga_streamlined.hpp  resize_fpga_streamlined.hpp  xf_resize_config.h
src/image_proc/src/: rectify.cpp  rectify_fpga_streamlined.cpp  rectify_resize_fpga_streamlined.cpp  resize.cpp  resize_fpga_streamlined.cpp
src/perception_2nodes/: setup.cfg  setup.py
src/perception_2nodes/launch/: analyse_rectify_resize.launch.py  raw_rectify_resize.launch.py  simulated_rectify_resize.launch.py  trace_rectify_resize.launch.py  trace_rectify_resize_fpga_streamlined.launch.py
src/perception_2nodes/models/camera-plugin/: model.config  model_distorted.sdf  model_undistorted.sdf
src/perception_2nodes/perception_2nodes/: __init__.py  image_raw_publisher.py
src/perception_2nodes/worlds/: camera.world  camera_dynamic.world  camera_dynamic_hd.world  camera_dynamic_undistorted.world  camera_simple.world
src/tracetools_image_pipeline/: CMakeLists.txt  Doxyfile  package.xml
src/tracetools_image_pipeline/include/tracetools_image_pipeline/: tp_call.h  tracetools.h
src/tracetools_image_pipeline/src/: tracetools.c
src/tracing/: names.py  tracepoints.py
src/vitis_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/vitis_common/include/common/: ros_opencl_120.hpp  utilities.hpp
src/vitis_common/src/: utilities.cpp
